# alx_travel_app_0x03

./: README.md
alx_travel_app/alx_travel_app/: README.md  requirement.txt
alx_travel_app/alx_travel_app/alx_travel_app/: settings.py  urls.py
alx_travel_app/alx_travel_app/listings/: API_endpoints.txt  README.md  celery.py  views.py
alx_travel_app/alx_travel_app/listings/management/commands/: seed.py
alx_travel_app/alx_travel_app/listings/services/: chapa_service.py
alx_travel_app/listings/: models.py  pyproject.toml  serializers.py  tasks.py  tests.py  tests_payment.py  urls.py
alx_travel_app/listings/templates/emails/: booking_notification_host.html  payment_confirmation.html
