build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alxtravelapp"
version = "0.1.0"
description = "ALX Travel App - A Django-based travel application"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/alxtravelapp"
Repository = "https://github.com/yourusername/alxtravelapp"
Issues = "https://github.com/yourusername/alxtravelapp/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'